cluster/apps/default/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo
    spec:
      containers:
      - name: echo
        image: ealen/echo-server:0.7.0 # {"$imagepolicy": "flux-system:echo"}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
            httpHeaders:
            - name: x-echo-code
              value: "200"
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
            httpHeaders:
            - name: x-echo-code
              value: "200"
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
