cluster/apps/default/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: echo
