cluster/apps/default/echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
spec:
  rules:
    - host: echo.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo
                port:
                  number: 80
  tls:
    - hosts:
        - echo.${SECRET_PUBLIC_DOMAIN}
